--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           node-version: 18
       - name: install dependencies
-        run: npm install
+        run: npm ci
       - name: run tests
         run: npm test
 
@@ -35,7 +35,7 @@ jobs:
         with:
           node-version: 18
       - name: install dependencies
-        run: npm install
+        run: npm ci
 
   deploy:
     runs-on: ubuntu-latest
@@ -47,6 +47,6 @@ jobs:
         with:
           node-version: 18
       - name: install dependencies
-        run: npm install
+        run: npm ci
       - name: deploy
         run: echo "deploy"
